--- a/1_Julia basics/5_Finding the data type.ipynb
+++ b/1_Julia basics/5_Finding the data type.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
      "text": [
       "Int64\n",
       "Int64\n",
-      "31.5\n"
+      "Float64\n"
      ]
     }
    ],
