--- a/2_Data structures/6_Modifying arrays.ipynb
+++ b/2_Data structures/6_Modifying arrays.ipynb
@@ -87,6 +87,36 @@
    "source": [
     "* Use slicing to replace the 3rd to the 6th elements with 3, 4, 5 and 6."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4-element Vector{Int64}:\n",
+       " 3\n",
+       " 4\n",
+       " 5\n",
+       " 6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create array of zeros\n",
+    "x = zeros(Float64, 100)\n",
+    "\n",
+    "# Set the second value to 12\n",
+    "x[2] = 12\n",
+    "\n",
+    "# Set the values from the 3rd to 6th index\n",
+    "x[3:6]=[3,4,5,6]"
+   ]
   }
  ],
  "metadata": {
