--- a/2_Data structures/8_Appending arrays.ipynb
+++ b/2_Data structures/8_Appending arrays.ipynb
@@ -26,24 +26,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching append!(::Float64, ::Vector{Float64})\nClosest candidates are:\n  append!(!Matched::BitVector, ::Any) at bitarray.jl:786\n  append!(!Matched::Vector, ::AbstractVector) at array.jl:1105\n  append!(!Matched::AbstractVector, ::Any) at array.jl:1113\n  ...",
-     "output_type": "error",
-     "traceback": [
-      "MethodError: no method matching append!(::Float64, ::Vector{Float64})\n",
-      "Closest candidates are:\n",
-      "  append!(!Matched::BitVector, ::Any) at bitarray.jl:786\n",
-      "  append!(!Matched::Vector, ::AbstractVector) at array.jl:1105\n",
-      "  append!(!Matched::AbstractVector, ::Any) at array.jl:1113\n",
-      "  ...\n",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicated value 31.4"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ d:\\Cursos\\Julia\\2_Data structures\\8_Appending arrays.ipynb:8"
+      "All run times: [35.1, 34.0, 34.31, 32.8, 32.04, 33.66, 32.41, 32.32, 33.37, 31.4, 30.44, 31.21, 30.38, 30.52, 30.2]\n"
      ]
     }
    ],
