--- a/DataCamp/2_Data structures/9_Operating on body temperatures.ipynb
+++ b/DataCamp/2_Data structures/9_Operating on body temperatures.ipynb
@@ -36,16 +36,16 @@
    "outputs": [],
    "source": [
     "# Subtract 32 from each element of body_temps_f\n",
-    "body_temps_sub = ____\n",
+    "body_temps_sub = body_temps_f .- 32\n",
     "\n",
     "# Multiply each element in body_temps_sub by 5/9\n",
-    "body_temps_c = ____\n",
+    "body_temps_c = body_temps_sub .* 5/9\n",
     "\n",
     "# Sort the temperatures from lowest to highest\n",
-    "sorted_body_temps_c = ____(____)\n",
+    "sorted_body_temps_c = sort(body_temps_c)\n",
     "\n",
     "# Print the 5 lowest temperatures\n",
-    "println(____)"
+    "println(sorted_body_temps_c[1:5])"
    ]
   }
  ],
